• Made image responsive (Vertically and Horizontally!). • Removed horizontal scroll bar (Body element was the problem). • Fixed the issue of the image and figcaption not stacking vertically. • Misc sizing adjustments for more web responsiveness. • Started writing comments to make understandable code (Good habits).

--- a/styles.css
+++ b/styles.css
@@ -1,17 +1,25 @@
 body {
     background-color: rgba(140,35,50, 0.9);
-    max-width: 100%;
+    max-width: auto;
+    height: 100%;
+    width: auto;
   }
   
   .image {
-    display: block;
+    flex-direction: column;
+    box-sizing: border-box;
+    min-width: 0;
     max-width: 100%;
+    width: 100%;
     height: auto;
     border: solid 10px;
     border-radius: 10%;
+    
   }
   
   .fig {
+    flex-direction: column;
+    width: auto;
     text-align: center;
     font-family: Verdana;
     font-size: 14px;
@@ -32,6 +40,15 @@ body {
   }
   
   .img-div {
+    display: flex;
+    flex-direction: column;
+    box-sizing: border-box;
+    width: 100%;
+    height: 100%;
+    min-width: 0;
+    max-width: 1000px;
+    max-height: auto;
+    margin: auto;
   }
   
   .p-format {
